--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-player": "^2.11.0",
     "strava-v3": "^2.1.0",
     "swr": "^1.3.0",
     "typescript": "4.8.4"
