--- a/package.json
+++ b/package.json
@@ -9,20 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@turf/along": "^6.5.0",
+    "@turf/helpers": "^6.5.0",
+    "@turf/length": "^6.5.0",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "daisyui": "^2.39.1",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "mapbox-gl": "^2.10.0",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-map-gl": "^7.0.19",
     "react-player": "^2.11.0",
     "strava-v3": "^2.1.0",
     "swr": "^1.3.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/node": "18.11.9",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.3"
